# HiroWire

./: .dockerignore  .env-sample  Cargo.toml  Dockerfie  readme.md
src/: main.rs
templates/: base.html  footer.html  header.html  index.html  peers.html  sidebar.html
